# django-orm-intellisense

./: .gitignore  .mcp.json  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  e2e_failure_fix.md  implementation_plan.md  optimization_plan.md  package-lock.json  package-vsix.sh  package.json  tsconfig.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-prebuild.yml
.lh/: .gitignore.json  .vscodeignore.json  package.json.json
bench/: SUMMARY.md  after-final-ts.json  after-p1-ts.json  after-p10-ts.json  after-p10.txt  after-p11-ts.json  after-p11.txt  after-p12-ts.json  after-p12.txt  after-p2-rust-cache.txt  after-p2-ts-napi.txt  after-p3-rust-discovery.txt  after-p4-rust-static-index.txt  after-p6_1-ts.json  after-p6_2-surface-pipeline.txt  after-p8-surface-cache.txt  after-p8-ts.json  after-p8done-ts.json  after-p8done.txt  baseline-python.json  baseline-ts.json
crates/: README.md
crates/core/: Cargo.toml
crates/core/benches/: cache_bench.rs  discovery_bench.rs  static_index_bench.rs
crates/core/examples/: verify_fp.rs
crates/core/src/: cache.rs  discovery.rs  lib.rs
crates/core/src/features/: django_builtins.rs  lookup_paths.rs  mod.rs  orm_members.rs  reexports.rs  relation_targets.rs
crates/core/src/semantic/: graph.rs  mod.rs
crates/core/src/static_index/: indexer.rs  mod.rs  resolver.rs  types.rs  visitor.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
docs/: django-db-models-support-matrix.md
fixtures/advanced_queries_project/: manage.py
fixtures/minimal_project/: manage.py
fixtures/reexport_project/: manage.py
python/benchmarks/: bench_reindex.py
python/django_orm_intellisense/: __init__.py  __main__.py  stress_test.py
scripts/: build-native.sh
src/: extension.ts
src/bench/: compare.ts
src/client/: extension.ts  protocol.ts
src/server/: completionProvider.ts  fieldLookups.ts  lookupResolver.ts  nativeCache.test.ts  (+6 more)
(+78 files in other folders)
